--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
             text-align: center;
         }
 
+        button {
+            display: block;
+            margin: 5px auto;
+        }
+
         section {
             display: block;
             overflow: auto;
@@ -50,28 +55,31 @@
 
     <main>
         <h1>classChange.js</h1>
+        <p>
+            <a href="#" data-method="destroy">Destroy all delegate() event listeners</a>
+        </p>
         <section class="methods">
             <h2>Methods</h2>
             <div class="add">
-                <button>Method: Add</button>
+                <button>Add</button>
             </div>
             <div class="remove active round">
-                <button>Method: Remove</button>
+                <button>Remove</button>
             </div>
             <div class="toggle active round">
-                <button>Method: Toggle</button>
+                <button>Toggle</button>
             </div>
         </section>
         <section class="delegate">
             <h2>Delegated Events</h2>
             <div class="add">
-                <button>Delegate: Add</button>
+                <button>Add</button>
             </div>
             <div class="remove active round">
-                <button>Delegate: Remove</button>
+                <button>Remove</button>
             </div>
             <div class="toggle active round">
-                <button>Delegate: Toggle</button>
+                <button>Toggle</button>
             </div>
         </section>
         <section class="args">
@@ -97,68 +105,87 @@
     <!-- JavaScript -->
     <script src="dist/class-change.js"></script>
     <script>
-        var demos = {
-            // Methods
-            methods: {
-                add: document.querySelector('.methods .add button').addEventListener('click', function(e) {
-                    classChange.add('.methods .add', 'active round');
-                }),
-                remove: document.querySelector('.methods .remove button').addEventListener('click', function(e) {
-                    classChange.remove('.methods .remove', 'active round');
-                }),
-                toggle: document.querySelector('.methods .toggle button').addEventListener('click', function(e) {
-                    classChange.toggle('.methods .toggle', 'active round');
-                })
-            },
-            // Delegate Events
-            delegate: {
-                add: classChange.delegate({
-                    matches: '.delegate .add button',
-                    add    : 'active round',
-                    change : '.delegate .add'
-                }),
-                remove: classChange.delegate({
-                    matches: '.delegate .remove button',
-                    remove : 'active round',
-                    change : '.delegate .remove'
-                }),
-                toggle: classChange.delegate({
-                    matches: '.delegate .toggle button',
-                    toggle : 'active round',
-                    change : '.delegate .toggle'
-                }),
-            },
-            // Malformed Arguments
-            args: {
-                array: classChange.delegate({
-                    matches: '.args .array button',
-                    toggle : '   active   round   ',
-                    change : '.args .array'
-                }),
-                string: classChange.delegate({
-                    matches: '.args .string button',
-                    toggle : ['   active   ', '   round   '],
-                    change : '.args .string'
-                })
-            },
-            // Change Function
-            changefn: {
-                elm: classChange.delegate({
-                    matches: '.changefn button',
-                    toggle : 'active',
-                    change : function(elm, i) {
-                        return elm.parentNode;
-                    }
-                }),
-                index: classChange.delegate({
-                    matches: '.changefn button',
-                    toggle : 'round',
-                    change : function(elm, i) {
-                        return document.querySelectorAll('.changefn div')[i];
-                    }
-                })
+        // Methods
+        document.querySelector('.methods .add button').addEventListener('click', function(e) {
+            classChange.add('.methods .add', 'active round');
+        });
+        document.querySelector('.methods .remove button').addEventListener('click', function(e) {
+            classChange.remove('.methods .remove', 'active round');
+        });
+        document.querySelector('.methods .toggle button').addEventListener('click', function(e) {
+            classChange.toggle('.methods .toggle', 'active round');
+        });
+
+        // Delegated Events (Storing references in array for destroyDelegated() function)
+        var demoDelegatedEvents = [
+            // Add
+            classChange.delegate({
+                matches: '.delegate .add button',
+                add    : 'active round',
+                change : '.delegate .add'
+            }),
+            // Remove
+            classChange.delegate({
+                matches: '.delegate .remove button',
+                remove : 'active round',
+                change : '.delegate .remove'
+            }),
+            // Toggle
+            classChange.delegate({
+                matches: '.delegate .toggle button',
+                toggle : 'active round',
+                change : '.delegate .toggle'
+            })
+        ];
+
+        // Malformed Arguments
+        var demoMalformedArguments = [
+            // Array
+            classChange.delegate({
+                matches: '.args .array button',
+                toggle : '   active   round   ',
+                change : '.args .array'
+            }),
+            // String
+            classChange.delegate({
+                matches: '.args .string button',
+                toggle : ['   active   ', '   round   '],
+                change : '.args .string'
+            })
+        ];
+
+        // Change Function
+        var demoChangeFn = [
+            classChange.delegate({
+                matches: '.changefn button',
+                toggle : 'active',
+                change : function(elm, i) {
+                    return elm.parentNode;
+                }
+            }),
+            classChange.delegate({
+                matches: '.changefn button',
+                toggle : 'round',
+                change : function(elm, i) {
+                    return document.querySelectorAll('.changefn div')[i];
+                }
+            })
+        ];
+
+        // Add event listeners for destroy and trigger buttons
+        document.querySelector('a[data-method="destroy"]').addEventListener('click', function(e) {
+            e.preventDefault();
+
+            var count  = 0;
+            var events = [].concat(demoDelegatedEvents, demoMalformedArguments, demoChangeFn);
+
+            for (var i = 0; i < events.length; i++) {
+                events[i].destroy();
+                count++;
             }
-        }
+
+            console.log('Destroyed ' + count + ' class-change event listeners')
+        });
     </script>
 
 </body>
